# hexlet_pytest

./: .gitignore  pyproject.toml
tests/: test_example.py  test_stack.py
tests/fixtures/: after.txt  before.txt
